--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-ya",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/IT22889324/reactWeb",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -30,9 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
